# emergent_spacetime

./: .gitignore  README.md  cosmic_bootstrap_code.py  emergent_spacetime_artifact.md  emergent_spacetime_code.py  emergent_spacetime_paper.tex  end_of_time_and_last_man.tex  er-epr-treatise.tex  fine_tuning_haskell.hs  fine_tuning_treatise.tex  index.html  materialist_demolition.tex  qec_light_speed_paper.tex  quantum-measurement-treatise.tex  temporal_fundamentalism_paper.tex  timeless_physics.tex  unified-physics-paper.tex
.claude/steering/: product.md  structure.md  tech.md
Research_Artifact_Bundle/: Man_Is_Word_Chat_Artifact.txt  Man_Is_Word_Logos.tex
code/haskell/: README.md  black-hole-information-paradox-haskell.hs  double_slit_haskell.hs  er-epr-haskell.hs  imc-standard-model-haskell.hs  info_geometry.hs  measurement_solver.hs  quantum-entanglement-haskell.hs  quantum_gravity_haskell.hs  quantum_gravity_main.hs  semantic_physics_core.hs  superposition_solver.hs
code/haskell/cosmology/non_commutative_holonomy_emergent_spacetime/: README.md  non_commutative_holonomy_emergent_spacetime.cabal
code/haskell/cosmology/non_commutative_holonomy_emergent_spacetime/examples/: Main.hs
code/haskell/cosmology/non_commutative_holonomy_emergent_spacetime/src/InformationalSpacetime/: Category.hs  Galaxy.hs  Geometry.hs  Holonomy.hs
code/haskell/cosmology/non_commutative_holonomy_emergent_spacetime/test/: CategorySpec.hs  HolonomySpec.hs
code/haskell/foundations/categorical-anholonomic-information-field/: .gitignore  README.md  categorical-anholonomic-information-field.cabal  package.yaml  stack.yaml
code/haskell/foundations/categorical-anholonomic-information-field/app/: Main.hs
code/haskell/foundations/categorical-anholonomic-information-field/src/CAIF/Anholonomy/: Field.hs
code/haskell/foundations/categorical-anholonomic-information-field/src/CAIF/Category/: Information.hs
code/haskell/foundations/categorical-anholonomic-information-field/src/CAIF/Experimental/: Predictions.hs
code/haskell/foundations/categorical-anholonomic-information-field/src/CAIF/Galaxy/: Dynamics.hs
code/haskell/foundations/categorical-anholonomic-information-field/src/CAIF/Geometry/: Emergent.hs
code/haskell/foundations/categorical-anholonomic-information-field/src/CAIF/Quantum/: FieldTheory.hs
code/haskell/foundations/categorical-anholonomic-information-field/src/CategoricalAnholonomic/: AnholonomicField.hs  Computation.hs  Core.hs  Holonomy.hs  InfoCategory.hs  Metric.hs  Quantum.hs
code/haskell/foundations/categorical-anholonomic-information-field/test/: Spec.hs
code/haskell/foundations/categorical_gauge_time_foundations/: README.md  categorical_gauge_time_foundations.cabal
code/haskell/foundations/categorical_gauge_time_foundations/src/Applications/: Cosmology.hs  Experimental.hs  QuantumGravity.hs
code/haskell/foundations/categorical_gauge_time_foundations/src/Category/: Base.hs  Constraint.hs  Functors.hs  GaugeTime.hs  HigherGauge.hs  Relational.hs
code/haskell/foundations/categorical_gauge_time_foundations/src/Physics/: Decoherence.hs  GaugeTheory.hs  Observables.hs  PageWootters.hs  QuantumMechanics.hs  WheelerDeWitt.hs
code/haskell/foundations/categorical_gauge_time_foundations/test/: Spec.hs
code/haskell/foundations/information_energy_equivalence/: Makefile  README.md  information-energy-equivalence.cabal
code/haskell/foundations/information_energy_equivalence/src/: EIC2Framework.hi  EIC2Framework.hs  HigherCategory.hs  InformationGeometry.hs  QuantumAlgebra.hs
code/haskell/quantum-gravity/spectral-information/: ErrorCorrection.hs  InformationOperator.hs  Main.hs  README.md  ScatteringTheory.hs  SpectralSolver.hs  SpectralTypes.hs  spectral-information.cabal
code/haskell/semantic-physics/unified-physics-treatise/: LICENSE  README.md  unified-physics-treatise.cabal
code/haskell/semantic-physics/unified-physics-treatise/app/: Main.hs
code/haskell/semantic-physics/unified-physics-treatise/src/SemanticPhysics/: CategoryTheory.hs  Constraints.hs  Core.hs  EmergentSpacetime.hs  Experiments.hs  HolographicCode.hs  Information.hs  QuantumInformation.hs  TensorNetwork.hs  UnifiedForces.hs
code/haskell/semantic-physics/unified-physics-treatise/test/: Spec.hs
code/haskell/semantic-physics/unified-physics-treatise/test/SemanticPhysics/: ConstraintsSpec.hs  CoreSpec.hs  EmergentSpacetimeSpec.hs
code/python/: consciousness_emergence_code.py  matter_emergence_code.py
docs/: index.html
docs/info-energy/: generate-og-image.js  generate_og_image.py  index.html  og-image.html
haskell/: README.md  haskell_info_physics.hs  quantum-measurement-haskell.hs  semantic_examples.hs  unification-forces-haskell.hs
haskell-quantum-entanglement/: README.md  entanglement_spacetime_haskell.hs
haskell-quantum-gravity/: black_hole_info.hs  cosmology.hs  emergent_gauge.hs
haskell/foundations/information_energy_equivalence/: README.md  run.sh  stack.yaml
info-energy/: index.html  script.js  style.css
paper/foundations/src/: categorical-anholonomic-information-field.tex
papers/: deepseek_latex_20250722_9cdbe7.tex
papers/consciousness-studies/src/: end_materialism_paper.tex  man_is_word_paper.tex
papers/cosmology/src/: emergent_spacetime_repr.tex  emergent_spacetime_treatise.tex  non_commutative_holonomy_emergent_spacetime.tex
papers/evolutionary-biology-critical/src/: emergent_spacetime_ontology_gauge_time_and_paleontology_v3.tex  gauge_variant_time_category_error.tex
papers/foundations/compiled/: computational_physics_validation.md  mathematical_rigor_ccu.md
papers/foundations/src/: categorical-anholonomic-information-field.tex  categorical_gauge_time_foundations.tex  complexity-class-unification.tex  double_slit_treatise.tex  emergent_gravity_constraints_complexity.tex  emergent_gravity_peer_review.md  functorial-physics-and-information-theoretic-foundations.tex  imc_standard_model_treatise.tex  information_conversion_laws.tex  information_energy_equivalence_paper.tex  information_ontology_realistic.tex  (+4 more)
python/: README.md  biological_information_code.py
(+55 files in other folders)
