cabal-version:      2.4
name:               information-energy-equivalence
version:            1.0.0.0
synopsis:           E = Ic² - Information-Energy Equivalence Framework
description:        Complete implementation of the information-energy equivalence 
                    principle E = Ic², demonstrating how spacetime emerges from 
                    quantum error correction and information theory.
homepage:           https://github.com/mlong/emergent_spacetime
license:            MIT
author:             Matthew Long
maintainer:         mlong@example.com
category:           Physics, Quantum, Information Theory
build-type:         Simple

executable info-energy
    main-is:          Main.hs
    other-modules:    HigherCategory
                     QuantumAlgebra
                     InformationGeometry
                     QuantumCircuitSimulation
                     TensorNetworkMERA
                     MachineLearningOptimization
    
    build-depends:    base >=4.14 && <5,
                     vector >= 0.12,
                     containers >= 0.6,
                     random >= 1.2
    
    hs-source-dirs:   src
    default-language: Haskell2010
    
    ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N

library
    exposed-modules:  HigherCategory
                     QuantumAlgebra
                     InformationGeometry
                     QuantumCircuitSimulation
                     TensorNetworkMERA
                     MachineLearningOptimization
    
    build-depends:    base >=4.14 && <5,
                     vector >= 0.12,
                     containers >= 0.6,
                     random >= 1.2
    
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2

test-suite info-energy-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:    base >=4.14 && <5,
                     information-energy-equivalence
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N