cabal-version:      2.4
name:               spectral-information
version:            0.1.0.0
synopsis:           Spectral Theory of Information-Energy Operators in Emergent Spacetime
description:        Implementation of the mathematical framework connecting spectral theory 
                    of Schrödinger operators to emergent spacetime through information-energy 
                    equivalence. Based on the paper "Spectral Theory of Information-Energy 
                    Operators in Emergent Spacetime".
homepage:           https://github.com/yourusername/emergent_spacetime
license:            MIT
license-file:       LICENSE
author:             Matthew Long, Claude Sonnet 4
maintainer:         your.email@example.com
category:           Physics, Mathematics
build-type:         Simple
extra-source-files: README.md

common warnings
    ghc-options: -Wall -Wcompat -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  SpectralTypes
                    , InformationOperator
                    , SpectralSolver
                    , ErrorCorrection
                    , ScatteringTheory
    build-depends:    base >=4.14 && <5
                    , hmatrix >=0.20
                    , vector >=0.12
                    , containers >=0.6
    hs-source-dirs:   .
    default-language: Haskell2010
    default-extensions: GeneralizedNewtypeDeriving
                      , DeriveFunctor
                      , DeriveGeneric
                      , FlexibleContexts
                      , RecordWildCards
                      , TupleSections

executable spectral-information
    import:           warnings
    main-is:          Main.hs
    other-modules:    SpectralTypes
                    , InformationOperator
                    , SpectralSolver
                    , ErrorCorrection
                    , ScatteringTheory
    build-depends:    base >=4.14 && <5
                    , hmatrix >=0.20
                    , vector >=0.12
                    , containers >=0.6
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite spectral-information-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    other-modules:    SpectralTypes
                    , InformationOperator
                    , SpectralSolver
                    , ErrorCorrection
                    , ScatteringTheory
    build-depends:    base >=4.14 && <5
                    , hmatrix >=0.20
                    , vector >=0.12
                    , containers >=0.6
                    , QuickCheck >=2.14
                    , hspec >=2.7
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N